VR6-28 Prevent footer from covering content on smaller screens.

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -211,9 +211,13 @@ form #content_block_researcher_title {
 
 
 body {
-    margin-bottom: 25%; /*overwrites 133px that's showing up only in prod*/
   font-family: "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
 }
 
+@media screen and (min-width: 768px) {
+    body {
+        margin-bottom: 25%; /*overwrites 133px that's showing up only in prod*/
+    }
+}
 
